change display of text+scan in etexts

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1610,13 +1610,14 @@ TODO
 
 /* .etextPage h4.page:last-child { padding-bottom:25px; } */
 .etextPage:not(.unformated) .overpage { overflow-x: auto;}
-.etextPage:not(.unformated) .overpage { padding-bottom:10px}
+.etextPage.unformated.hasSeq,
+.etextPage:not(.unformated) .overpage { padding-bottom:25px}
 .etextPage.unformated:not(.hasSeq)  { padding-bottom:25px; }
 .etextPage.unformated h4.page { white-space: normal;  }
-.etextPage h5 { margin-top:0; color:#777; display:inline-block; }
+.etextPage h5 { margin-top:0; color:#777; display:inline-block; margin-bottom:10px;}
 .etextPage h4 + h5 { margin-top:15px;margin-bottom:30px;}
 .etextPage img.page, .etextPage h5 a, .etextPage .small a { cursor:pointer; } 
-.etextPage img.page { box-shadow:1px 1px 7px rgba(0,0,0.2); display:block; max-width:100%; margin-bottom:0px; margin-top:3px;
+.etextPage img.page { box-shadow:1px 1px 7px rgba(0,0,0.2); display:block; max-width:100%; margin-bottom:25px; margin-top:3px;
    margin-left: auto; margin-right: auto; max-height:80vh;}
 .etextPage button { margin-left:-8px !important; }
 .etextPage button img { height:28px;transform:rotate(-90deg); opacity:0.75;}
@@ -1625,9 +1626,9 @@ TODO
 .etextPage .button:hover img,
 .etextPage button:hover img { opacity:1;}
 .etextPage.manifest-error h5, .etextPage.manifest-error button { opacity:0.5;pointer-events:none; }
-.etextPage .small { padding:0 50px; text-align:center;  margin-bottom:25px;margin-top:10px; position:relative;display:inline-block;}
+.etextPage .small { padding:0 20px 0 50px; text-align:center;  margin-bottom:25px;margin-top:10px; position:relative;display:inline-block;}
 .etextPage > div { position:relative; }
-.etextPage > .imagePage { position:relative; text-align:center; }
+.etextPage > .imagePage { position:relative; text-align:right; }
 .etextPage > div .lang { position:absolute;line-height:24px; display:none; }
 /* .etextPage .toggle-volume { font-size:12px; } */
 /* .etextPage button.hide { position:absolute; bottom:6px;left:80px;opacity:0}  */
