--- a/src/components/App.css
+++ b/src/components/App.css
@@ -433,7 +433,11 @@ a.result + #matches .result-content::before { left:110px; width:calc(100% - 110p
 .result-content #num-box:empty::before { content:'1'; }
 
 .result-content #num-box { width:20px;height:20px;border: 2px solid #152631; font-size:9px;color:black;font-weight:700;line-height:normal;
-   display:inline-flex;align-items: center;justify-content: center; box-sizing: border-box; vertical-align: top; line-height:10px;}
+   display:inline-flex;align-items: center;justify-content: center; box-sizing: border-box; vertical-align: top; line-height:10px; cursor:pointer;
+   margin-right:5px;
+}
+
+.result-content #num-box.checked { background:#152631;color:white;}
 
 .result-content #icon { display: inline-block;width:calc(80px + 25px + 25px);height:90px; vertical-align: top; text-align: center;
    position:absolute; }
