--- a/src/components/App.css
+++ b/src/components/App.css
@@ -392,7 +392,7 @@ li + a.result { margin-top:-5px; }
 /* --------------------------------------------------------------------------------------------------------------------- results/matches */
 
 a.result { padding:0;/*margin-bottom:10px;*/width:100%;display: inline-block; /*margin-top:3px;*/ max-width:calc(100% - 100px);}
-a.result + #matches a.result { max-width:100%;}
+a.result + #matches a.result { max-width:calc(100% - 25px);}
 a.result button { text-transform:none; padding-bottom:0;}
 /* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
 .result-box ~ #matches, a.result ~ #matches { /*margin-top:-15px!important;  padding:2px 0 0px 0 ;*/ margin-left:185px; font-size:13px; 
@@ -405,11 +405,11 @@ a.result button { text-transform:none; padding-bottom:0;}
 a.result + #matches a.result + #matches .match { max-width:calc(100% - 75px); }
 a.result + #matches .result-content { padding-left:0; min-height:70px; }
 
-a.result + #matches .result-content #num-box { border-width:1px; border-color:rgba(0,0,0,0.35); margin-top:0px;}
+a.result + #matches .result-content #num-box { border-width:1px; border-color:rgba(0,0,0,0.35); margin-top:0px; /*pointer-events:none;*/}
 a.result + #matches .result-content h3 { font-size:12px; line-height:20px; }
 a.result + #matches .result-content #matches { font-size:12px; line-height:18px; }
 a.result + #matches .result-content .contenu { margin-left:100px; max-width:calc(100% - 160px - 24px);}
-a.result + #matches .result-content #matches { margin-left:120px; margin-bottom:0;}
+a.result + #matches .result-content #matches { margin-left:125px; margin-bottom:0;}
 
 a.result + #matches .result-content::before { left:110px; width:calc(100% - 110px - 50px); }
 
@@ -440,9 +440,11 @@ a.result + #matches .result-content::before { left:110px; width:calc(100% - 110p
 .result-content #num-box.checked { background:#152631;color:white;}
 
 .result-content #icon { display: inline-block;width:calc(80px + 25px + 25px);height:90px; vertical-align: top; text-align: center;
-   position:absolute; }
-   .result-content #icon div:last-child { color: rgba(118, 118, 118, 0.9); font-size:9px;font-weight:600; 
-      max-width: 100px;  overflow: hidden; position: relative; text-overflow: ellipsis; text-align: center; margin: 5px auto; }
+   position:absolute; 
+}
+.result-content #icon div:last-child { color: rgba(118, 118, 118, 0.9); font-size:9px;font-weight:600; 
+      max-width: 100px;  overflow: hidden; position: relative; text-overflow: ellipsis; text-align: center; margin: 5px auto; white-space: nowrap;
+}
       
 .result-content .contenu { display:inline-block; margin-left:160px; max-width: calc(100% - 160px - 20px); vertical-align: top; }
 
