--- a/src/components/App.css
+++ b/src/components/App.css
@@ -917,11 +917,22 @@ vertical-align:middle;}
    left:calc((100vw - 1440px)/2 + 324px) !important; /* TODO fix when width under ~1250px */
 }
 #popHoverM > div:last-child .resource .data { padding-left:53px; padding-bottom:35px; padding-top:27px; }
-#popHoverM > div:last-child .resource .data .react-tabs { background-color:#fcf5e2; min-width:898px; margin-left:-25px;margin-top:15px; min-height:150px; font-size:0;}
+#popHoverM > div:last-child .resource .data .react-tabs { background-color:#fcf5e2; min-width:898px; margin-left:-25px;margin-top:20px; min-height:150px; font-size:0;}
 .react-tabs__tab { border:none;border-radius:0; width:calc(25% - 1px); font-size:10px; padding:0; text-align:center; line-height:40px; bottom:-1px !important; 
-   background-color:#fce08d; border-right:1px solid white; }
-.react-tabs__tab.react-tabs__tab--selected {background-color:#fcf5e2; }
+   background-color:#fce08d; border-right:1px solid white; 
+}
+.react-tabs__tab:last-child { width:calc(25%); border:none; }
+.react-tabs__tab.react-tabs__tab--selected {background-color:#fcf5e2;  }
 .react-tabs__tab.react-tabs__tab--disabled { color:rgba(0,0,0,0.25) !important; }
+.react-tabs__tab.react-tabs__tab b { font-weight:900; }
+
+#popHoverM .react-tabs__tab-list { margin-bottom:0;}
+#popHoverM .react-tabs__tab-panel { padding:25px;}
+/* #popHoverM .react-tabs__tab-panel > div { display:flex;align-items: baseline; } */
+#popHoverM .react-tabs__tab-panel img { height:20px; vertical-align:-6px; display: inline-block; margin-right:5px;}
+#popHoverM .react-tabs__tab-panel > div { font-size:13px; }
+#popHoverM .react-tabs__tab-panel * { font-weight:400; margin:0 10px 0 0;padding:0; display:inline-block;}
+#popHoverM .react-tabs__tab-panel b { font-weight:700;}
 
 #popHoverM + #popHoverM {display:none !important; }
 
