--- a/src/components/App.css
+++ b/src/components/App.css
@@ -936,6 +936,14 @@ vertical-align:middle;}
 #popHoverM .react-tabs__tab-panel b { font-weight:700;}
 #popHoverM .react-tabs__tab-panel a img { margin-right:0;}
 
+#popHoverM .react-tabs__tab-panel span.first + span,
+#popHoverM .react-tabs__tab-panel span.first { font-weight:600; }
+
+#popHoverM .react-tabs__tab-panel span.first { text-decoration: underline; margin-right:0;}
+
+#popHoverM .react-tabs__tab-panel span.label { margin-right:0;}
+#popHoverM .react-tabs__tab-panel span.label:not(:last-child)::after { content:";";padding:0 5px;}
+
 #popHoverM + #popHoverM {display:none !important; }
 
 #popHoverM { margin-top:-25px; }
@@ -1134,7 +1142,7 @@ h4:not(.first)
 
 
 
-.hover-menu { position:absolute; width:50px;right:-7px; top:-1px; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
+.hover-menu { position:absolute; /*width:50px;*/ right:-7px; top:-1px; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
 line-height:12px; } 
 .hover-menu img { height:26px; vertical-align: super;  flex-shrink:0; cursor:pointer; }
 .hover-menu div span#nb { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:2px;cursor:pointer;}
