--- a/src/components/App.css
+++ b/src/components/App.css
@@ -466,7 +466,7 @@ a.result + #matches .result-content::before { left:110px; width:calc(100% - 110p
 .result-content #icon.instance img,
 .result-content #icon.topic img{ width:60px; }
 
-.result-content #icon.wCopyR > img:last-child { width:16px; display: inline-block; margin-top:4px; }
+.result-content #icon.wCopyR > img { width:16px; display: inline-block; margin:4px 6px 0 6px; }
 .result-content #icon.wCopyR { margin-bottom:50px; }
 
 /*
@@ -1568,6 +1568,7 @@ TODO
 
 /* ------------------------------------------------------------------------------------------------------------------------ extended properties */
 
+
 .resource .data:not(.legal-props):not(.ext-props):not(#a):not(.b) > [data-prop="adm:metadataLegal"]:not(#a):not(.b) { display:none !important; } 
 
 .resource .data.legal-props { background-color:#ffffff; padding:35px; padding-bottom:0;}
@@ -2193,7 +2194,7 @@ body {overflow-x:hidden; }
 
 .widget label { text-transform:capitalize;  }
 .searchWidget > label > span,
-.dataWidget label > span { font-size:12px; }
+.dataWidget label > span { font-size:12px; word-break: break-all; }
 .searchWidget > label > span svg { width:16px; height:16px; } 
 .searchWidget.datatype > label > span svg { width:18px; height:18px; } 
 .searchWidget > label > span svg.excl { width:12px;height:12px; vertical-align:-4px; }
