--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2194,7 +2194,7 @@ body {overflow-x:hidden; }
 
 .widget label { text-transform:capitalize;  }
 .searchWidget > label > span,
-.dataWidget label > span { font-size:12px; word-break: break-all; }
+.dataWidget label > span { font-size:12px; /*word-break: break-all;*/ }
 .searchWidget > label > span svg { width:16px; height:16px; } 
 .searchWidget.datatype > label > span svg { width:18px; height:18px; } 
 .searchWidget > label > span svg.excl { width:12px;height:12px; vertical-align:-4px; }
