--- a/src/components/App.css
+++ b/src/components/App.css
@@ -748,6 +748,7 @@ h4:not(:hover) > .lang
 .resource > .ariane { position:absolute; top:105px; color: #343434; left:0; margin-left:140px;padding-left:12.125%; }
 .resource > .ariane img { display:inline-block; margin-right:5px; vertical-align: -1px;}
 .resource > .ariane a { text-decoration: none; color: #343434; font-weight:700; font-size:13px;}
+.resource > .ariane a:hover span { text-decoration: underline;}
 
 .resource > .index .title { display:block; }
 
