--- a/src/components/App.css
+++ b/src/components/App.css
@@ -398,6 +398,11 @@ li + a.result { margin-top:-5px; }
 .external .result-box .sameAsLogo { border-radius:6px;border-width:2px;}
 .external .result-box .source-data { display:block; }
 
+.result-box .source-data { margin-left:10px;}
+.result-box .source a img { margin-left:0; }
+
+#matches + .result-box .sameAsLogo { margin:0; height:12px; line-height:12px; font-weight:600; vertical-align: 2px; }
+
 .external ~ .result-box { display:none; }
 
 a.result { padding:0;/*margin-bottom:10px;*/width:100%;display: inline-block; /*margin-top:3px;*/ max-width:calc(100% - 100px);}
@@ -450,7 +455,7 @@ a.result + #matches .result-content::before { left:110px; width:calc(100% - 110p
 
 .result-content #num-box svg { position:absolute; top:60px;}
 
-.result-content #num-box { width:20px;height:20px;border: 2px solid #152631; font-size:9px;color:black;font-weight:700;line-height:normal;
+.result-content #num-box { width:20px;height:20px;border: 2px solid rgba(10,20,30,0.5); font-size:9px;color:rgba(10,20,30,0.75);font-weight:700;line-height:normal;
    display:inline-flex;align-items: center;justify-content: center; box-sizing: border-box; vertical-align: top; line-height:10px; cursor:pointer;
    margin-right:5px;
 }
@@ -487,7 +492,7 @@ a.result + #matches .result-content::before { left:110px; width:calc(100% - 110p
 .result-content #icon.person img,
 */
 
-.result-content #icon > .thumb { background:black; width:140px; height:140px; margin:auto; overflow:hidden; box-shadow:0 1px 4px #cecece; display:flex;
+.result-content #icon > .thumb { background:black; width:130px; height:130px; margin:auto; overflow:hidden; box-shadow:0 1px 4px #cecece; display:flex;
    justify-content: center;
 }
 .result-content #icon > .thumb img { height:100%; width:auto; max-width:1000px; max-height:1000px; }
